# ldt-toolkit

./: .bumpversion.toml  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  README.md  SECURITY.md  build_docs.sh  mkdocs.fast.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  skrub_table_report.html
.github/ISSUE_TEMPLATE/: bug_report.yml  data_acquisition.yml  feature_build_trajectories.yml  feature_data_preparation.yml  feature_data_preprocessing.yml  feature_machine_learning.yml  feature_request.yml  question.yml  study_reproducibility.yml
.github/workflows/: bump-version.yml  compilation-verification.yml  docs.yml  publish-pypi.yml
docs/: .dates_cache.jsonl  BRANDING.md  CONTRIBUTING_DEV.md  community-hub.md  index.md
docs/api/: benchmarks.md  data-preparation.md  data-preprocessing.md  explainability.md  index.md  longitudinal-machine-learning.md  standard-machine-learning.md
docs/assets/audio/: ldt_podcast_en.m4a  ldt_podcast_es.m4a  ldt_podcast_fr.m4a  ldt_podcast_zh_hant.m4a
docs/getting-started/: installation.md  overview.md
docs/javascripts/: copy-to-llm-scope.js  diagram-zoom.js  homepage.js  image-zoom.js  mcs-visualization.js  search-shortcut.js
docs/public/resources/: banner.html
docs/study-reproducibility/: index.md  mcs-by-leap.md
docs/stylesheets/: extra.css
docs/theme/overrides/: home.html
docs/tutorials/: api.md  cli.md  index.md
ldt/: __init__.py
public/: mcs_w1_w7_mapping_apple.html
setup_R/: install_requirements.R  requirements.R
src/: __init__.py  operations.py
src/bridge/: __init__.py  runner.py
src/data_preparation/: __init__.py  catalog.py  operations.py
src/data_preparation/config/: go_cli_catalog.json
src/data_preparation/presets/prepare_mcs_by_leap/: __init__.py  pipeline.py  run.py
src/data_preparation/presets/prepare_mcs_by_leap/preview/: stage.py
src/data_preparation/presets/prepare_mcs_by_leap/stage_1_wave_paths/: __init__.py  datasets.yaml  stage.py
src/data_preparation/presets/prepare_mcs_by_leap/stage_2_subjects/: stage.py
src/data_preparation/presets/prepare_mcs_by_leap/stage_3_features/: __init__.py  stage.py
src/data_preparation/presets/prepare_mcs_by_leap/stage_4_composites/: __init__.py  stage.py
src/data_preparation/presets/prepare_mcs_by_leap/stage_5_output_format/: stage.py
src/data_preparation/tools/data_conversion/: __init__.py  data_conversion.py  run.py
src/data_preparation/tools/data_conversion/converters/: __init__.py  _tabular_converter.py  csv_to_parquet.py  csv_to_stata.py  parquet_to_csv.py  parquet_to_stata.py  stata_to_csv.py  stata_to_parquet.py
src/data_preparation/tools/synthetic_data_generation/: __init__.py  run.py  synthetic_data_generation.py
src/data_preparation/tools/synthetic_data_generation/generators/: __init__.py  event_shock_recovery.py  harmonisation_challenge.py  missing_data_scenarios.py  piecewise_changepoint.py  trend_patterns.py
src/data_preprocessing/: __init__.py  catalog.py  operations.py
src/data_preprocessing/config/: go_cli_catalog.json
src/data_preprocessing/presets/preprocess_mcs_by_leap/: __init__.py
src/data_preprocessing/support/: inputs.py  skrub_compat.py
src/data_preprocessing/tools/aggregate_long_to_cross_sectional/: __init__.py  run.py
src/data_preprocessing/tools/build_trajectories/: __init__.py  discovery.py  run.py  trajectory.py
src/data_preprocessing/tools/build_trajectories/trajectories/: clustermld.py  dtw.py
src/data_preprocessing/tools/clean_dataset/: __init__.py  run.py
src/data_preprocessing/tools/combine_dataset_with_trajectories/: __init__.py  run.py
src/data_preprocessing/tools/harmonise_categories/: __init__.py  run.py
src/data_preprocessing/tools/missing_imputation/: __init__.py  run.py
src/data_preprocessing/tools/pivot_long_to_wide/: __init__.py  run.py
src/data_preprocessing/tools/remove_columns/: __init__.py  run.py
src/data_preprocessing/tools/rename_feature/: __init__.py  run.py
src/data_preprocessing/tools/show_table/: __init__.py  run.py
src/data_preprocessing/tools/trajectories_viz/: __init__.py  render.py  run.py
src/ldt/: __init__.py
src/ldt/bridge/: catalog.py  operation_registry.py  operations.py  runner.py
src/ldt/data_preparation/: __init__.py  catalog.py  operations.py
src/ldt/data_preparation/config/: go_cli_catalog.json
src/ldt/data_preparation/presets/: __init__.py
src/ldt/data_preparation/presets/prepare_mcs_by_leap/: __init__.py  (+4 more)
src/ldt/data_preparation/tools/: __init__.py
src/ldt/data_preprocessing/: __init__.py  catalog.py  operations.py
src/ldt/data_preprocessing/config/: go_cli_catalog.json
src/ldt/data_preprocessing/presets/: __init__.py
src/ldt/data_preprocessing/support/: __init__.py  inputs.py
src/ldt/machine_learning/: __init__.py  catalog.py  operations.py
src/ldt/machine_learning/config/: go_cli_catalog.json
src/ldt/machine_learning/presets/: __init__.py
src/ldt/machine_learning/support/: __init__.py  inputs.py  runtime_validation.py
src/ldt/machine_learning/tools/: __init__.py  metrics.py
src/ldt/utils/: __init__.py
src/ldt/utils/templates/: __init__.py
src/machine_learning/: __init__.py  catalog.py  operations.py
src/machine_learning/config/: go_cli_catalog.json
src/machine_learning/support/: inputs.py  runtime_validation.py
src/machine_learning/tools/: __init__.py  metrics.py  target_scenarios.py
src/machine_learning/tools/bench_standard_and_longitudinal_ml/: __init__.py  run.py
src/machine_learning/tools/benchmark_longitudinal_ml/: __init__.py  run.py
src/machine_learning/tools/benchmark_standard_ml/: __init__.py  run.py
src/machine_learning/tools/longitudinal_machine_learning/: __init__.py  discovery.py  inputs.py  run.py
src/machine_learning/tools/standard_machine_learning/: __init__.py  discovery.py  run.py
src/machine_learning/tools/templates/: benchmark_notebook_template.py  benchmark_template.py  estimator_template.py  experiment_template.py  notebook_template.py
src/utils/: catalog.py  errors.py  metadata.py  operation_registry.py  runtime_warning_filters.py
(+204 files in other folders)
